--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- Tailwind  -->
+    <link href="/dist/styles.css" rel="stylesheet">
+    <title class = "text-3xl font-bold underline">Collaborative Blogging Platform</title>
   </head>
   <body>
     <div id="root"></div>
